# VCTRZ

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  ROADMAP.md  build-web.sh  installer.iss  package.bat  run_gui.bat
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
crates/vectorize-cli/: Cargo.toml
crates/vectorize-cli/src/: main.rs
crates/vectorize-core/: Cargo.toml
crates/vectorize-core/src/: lib.rs  line_layer.rs  merge.rs  palette.rs  par.rs  quality.rs  refine.rs
crates/vectorize-core/src/backend/: hybrid.rs  logo.rs  mod.rs  vtracer_backend.rs
crates/vectorize-core/src/fit/: mod.rs
crates/vectorize-core/src/optimize/: mod.rs
crates/vectorize-core/src/output/: mod.rs
crates/vectorize-core/src/preprocess/: mod.rs
crates/vectorize-core/src/segment/: mod.rs
crates/vectorize-core/src/shapes/: mod.rs
crates/vectorize-core/src/simplify/: mod.rs
crates/vectorize-core/src/trace/: mod.rs
crates/vectorize-core/tests/: integration.rs
crates/vectorize-gui/: Cargo.toml  build.rs  ui_config.json
crates/vectorize-gui/src/: main.rs  theme.rs
crates/vectorize-python/: Cargo.toml  pyproject.toml
crates/vectorize-python/src/: lib.rs
crates/vectorize-wasm/: Cargo.toml
crates/vectorize-wasm/src/: lib.rs
docs/: app.js  index.html
tests/: run_all_features.sh
