[workspace]
members = [
    "crates/vectorize-core",
    "crates/vectorize-cli",
    "crates/vectorize-python",
    "crates/vectorize-wasm",
    "crates/vectorize-gui",
]
# resolver = "2" is default for edition 2021+ workspaces, but be explicit
# to prevent feature unification bugs across workspace members
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
# Image I/O — pin to 0.25.x, configure decoder limits for untrusted input
image = "0.25"
# Image processing — edge detection (Canny), thresholding (Otsu), contours
imageproc = "0.26"
# Bezier curves — Raph Levien's library, best-in-class curve fitting & simplification
kurbo = "0.13"
# Parallelism — use from day one, don't bolt on later
rayon = "1.11"
# Color science — Oklab, CIELAB for perceptual color distance (not naive RGB)
palette = { version = "0.7", features = ["std"] }
# SVG parsing/rendering for validation and round-tripping
usvg = "0.47"
# 2D geometry operations (boolean ops, containment, simplification)
geo = "0.32"
# Polygon boolean operations — pure Rust port of Clipper2
# clipper2 = "0.1"  # TODO: evaluate clipper2-rust when published to crates.io
# Random number generation (k-means++ initialization)
rand = "0.9"
# VTracer backend engine (MIT licensed)
vtracer = "0.6"
visioncortex = "0.8"
# Error handling
thiserror = "2"
anyhow = "1"
# Serialization for configs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These pedantic lints create noise without value
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Optimize dependencies in dev builds — huge speedup for image processing
# Your code stays debuggable, but image/imageproc/kurbo run at release speed
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
# unwind needed so catch_unwind works for VTracer panics (especially in WASM)
panic = "unwind"

# Enable overflow checks for visioncortex in release mode.
# Without this, integer overflow wraps silently and can cause infinite loops.
[profile.release.package.visioncortex]
overflow-checks = true

