[package]
name = "vectorize-gui"
description = "Desktop GUI for vectorize — raster to SVG conversion"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vectorize-gui"
path = "src/main.rs"

[dependencies]
vectorize-core = { path = "../vectorize-core" }
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
image = { workspace = true }
resvg = "0.47"
usvg = { workspace = true }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs = "6"

[build-dependencies]
winresource = "0.1"
