[package]
name = "vectorize-python"
description = "Python bindings for vectorize"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# PyO3 requires cdylib — this MUST be in its own crate, not shared
# with the CLI binary. Mixing cdylib + bin in one crate causes linker issues.
[lib]
name = "vectorize"
crate-type = ["cdylib"]

[dependencies]
vectorize-core = { path = "../vectorize-core" }
image = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23"

[lints]
workspace = true
